<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="512dp"
    android:layout_height="662dp"
    android:padding="5dp"
    tools:context=".pages.ChargingFinishFragment">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/layer_list_rect"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:background="@drawable/layer_list_rect"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"/>

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/layer_list_rect"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"/>
    
    <TextView
        android:id="@+id/textViewChargingFinishMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/chargingFinishMessage"
        android:textSize="36sp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCarNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/carNum"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textViewChargingFinishMessage" />

    <ImageView
        android:id="@+id/imageViewFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/finish"
        app:layout_constraintTop_toBottomOf="@id/textViewCarNum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textViewConnectorDisconnectMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/connectorDisconnectMessage"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/imageViewFinish" />


    <TextView
        android:id="@+id/textViewChargingAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="80dp"
        android:text="@string/chargeOfAmount"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintBottom_toBottomOf="@id/view1" />

    <TextView
        android:id="@+id/textViewChargingAmtValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="0kWh"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textViewChargingAmt"
        app:layout_constraintStart_toStartOf="@id/textViewChargingAmt" />

    <TextView
        android:id="@+id/textViewChargingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/chargingTime"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/textViewChargingAmt"
        app:layout_constraintStart_toEndOf="@id/textViewChargingAmt" />

    <TextView
        android:id="@+id/textViewChargingTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="00:00:00"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textViewChargingTime"
        app:layout_constraintStart_toStartOf="@id/textViewChargingTime"/>

    <TextView
        android:id="@+id/textViewSoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/soc"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/textViewChargingAmt"
        app:layout_constraintStart_toEndOf="@id/textViewChargingTime" />

    <TextView
        android:id="@+id/textViewSocValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="0%"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textViewSoc"
        app:layout_constraintStart_toStartOf="@id/textViewSoc"/>

    <TextView
        android:id="@+id/textViewLimitSoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        android:text="@string/limitSoc"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/view3"
        app:layout_constraintTop_toTopOf="@id/view3"/>

    <TextView
        android:id="@+id/textViewLimitSocValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="90%"
        android:textSize="20sp"
        android:textColor="@color/black_500"
        app:layout_constraintTop_toBottomOf="@id/textViewLimitSoc"
        app:layout_constraintStart_toStartOf="@id/textViewLimitSoc" />

    <TextView
        android:id="@+id/textViewLimitKw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/limitKw"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/textViewLimitSoc"
        app:layout_constraintTop_toTopOf="@id/textViewLimitSoc"/>

    <TextView
        android:id="@+id/textViewLimitKwValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="120kW"
        android:textSize="20sp"
        android:textColor="@color/black_500"
        app:layout_constraintTop_toBottomOf="@id/textViewLimitKw"
        app:layout_constraintStart_toStartOf="@id/textViewLimitKw" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginEnd="4dp"
        android:text="@string/check"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:background="@drawable/shape_btn_blue"
        app:backgroundTint="@null"
        app:layout_constraintWidth_percent="0.48"
        app:layout_constraintTop_toBottomOf="@id/view3"
        app:layout_constraintEnd_toEndOf="@id/view3" />

</androidx.constraintlayout.widget.ConstraintLayout>