<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="512dp"
    android:layout_height="662dp"
    android:padding="5dp"
    tools:context=".pages.ChargingSequentialFragment">

    <TextView
        android:id="@+id/textViewSequentialMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/sequentialMessage"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewEstimatedChargingMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:text="@string/estimatedChargingTime"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/textViewSequentialMessage"
        app:layout_constraintStart_toStartOf="parent"  />

    <TextView
        android:id="@+id/textViewEstimatedChargingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="10분 후"
        android:textSize="26sp"
        android:textColor="@color/primary"
        app:layout_constraintStart_toEndOf="@id/textViewEstimatedChargingMessage"
        app:layout_constraintTop_toTopOf="@id/textViewEstimatedChargingMessage" />

    <ImageView
        android:id="@+id/imageViewBus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@drawable/bus"
        app:layout_constraintTop_toBottomOf="@id/textViewSequentialMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="contentDescription"/>

    <TextView
        android:id="@+id/textViewLimitSoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limitSoc"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/textViewLimitKw"
        app:layout_constraintLeft_toLeftOf="@id/textViewLimitKw"/>

    <TextView
        android:id="@+id/textViewLimitSocValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="90%"
        android:textSize="28sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/textViewLimitSoc"
        app:layout_constraintTop_toTopOf="@id/textViewLimitSoc" />

    <TextView
        android:id="@+id/textViewLimitKw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="50dp"
        android:text="@string/limitKw"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/textViewLimitValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="0kW"
        android:textSize="28sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/textViewLimitKw"
        app:layout_constraintTop_toTopOf="@id/textViewLimitKw" />



</androidx.constraintlayout.widget.ConstraintLayout>