<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/initLayout"
    android:layout_width="512dp"
    android:layout_height="692dp"
    tools:context=".pages.InitFragment">

    <TextView
        android:id="@+id/textViewInitMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/initMessage"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageViewConnectorBg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ccs2_bg"
        app:layout_constraintTop_toTopOf="@id/imageViewConnector"
        app:layout_constraintStart_toStartOf="@id/imageViewConnector"
        app:layout_constraintBottom_toBottomOf="@id/imageViewConnector"
        app:layout_constraintEnd_toEndOf="@id/imageViewConnector"
        tools:ignore="contentDescription"/>

    <ImageView
        android:id="@+id/imageViewConnector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/ccs2"
        app:layout_constraintTop_toBottomOf="@id/textViewInitMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="contentDescription"/>

    <TextView
        android:id="@+id/textViewLimitSoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limitSoc"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/textViewLimitKw"
        app:layout_constraintLeft_toLeftOf="@id/textViewLimitKw"/>

    <TextView
        android:id="@+id/textViewLimitSocValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="90%"
        android:textSize="28sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/textViewLimitSoc"
        app:layout_constraintTop_toTopOf="@id/textViewLimitSoc" />

    <TextView
        android:id="@+id/textViewLimitKw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="50dp"
        android:text="@string/limitKw"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/textViewLimitKwValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="0kW"
        android:textSize="28sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/textViewLimitKw"
        app:layout_constraintTop_toTopOf="@id/textViewLimitKw" />



</androidx.constraintlayout.widget.ConstraintLayout>