<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="512dp"
    android:layout_height="692dp"
    tools:context=".pages.ChargingFragment">

    <TextView
        android:id="@+id/textViewSocValue"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="120dp"
        android:gravity="center_horizontal"
        android:text="90%"
        android:textSize="96sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageViewBattery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/battery0"
        app:layout_constraintTop_toTopOf="@id/textViewSocValue"
        app:layout_constraintBottom_toBottomOf="@id/textViewSocValue"
        app:layout_constraintEnd_toStartOf="@id/textViewSocValue"
        tools:ignore="contentDescription"/>

    <ImageView
        android:id="@+id/imageViewBatteryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/battery0"
        app:layout_constraintTop_toTopOf="@id/imageViewBattery"
        app:layout_constraintStart_toStartOf="@id/imageViewBattery"
        app:layout_constraintEnd_toEndOf="@id/imageViewBattery"
        app:layout_constraintBottom_toBottomOf="@id/imageViewBattery"
        tools:ignore="contentDescription"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="450dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="#EFF5FB"
        app:layout_constraintTop_toBottomOf="@id/textViewSocValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewChargingAmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/electric_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="contentDescription" />

            <TextView
                android:id="@+id/textViewChargingAmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/chargeOfAmount"
                android:textSize="30sp"
                android:letterSpacing="0.36"
                android:maxLines="1"
                app:layout_constraintLeft_toRightOf="@id/imageViewChargingAmt"
                app:layout_constraintBottom_toBottomOf="@id/imageViewChargingAmt" />

            <TextView
                android:id="@+id/textViewChargingAmtValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:text="0kWh"
                android:textSize="30sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@id/textViewChargingAmt"
                app:layout_constraintBottom_toBottomOf="@id/textViewChargingAmt"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageViewChargingTimeRemain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/timere"
                app:layout_constraintStart_toStartOf="@id/imageViewChargingAmt"
                app:layout_constraintTop_toBottomOf="@id/imageViewChargingAmt"
                tools:ignore="contentDescription" />

            <TextView
                android:id="@+id/textViewChargingTimeRemain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chargingTimeRemain"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@id/textViewChargingAmt"
                app:layout_constraintBottom_toBottomOf="@id/imageViewChargingTimeRemain" />

            <TextView
                android:id="@+id/textViewChargingTimeRemainValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00:00"
                android:textSize="30sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/textViewChargingAmtValue"
                app:layout_constraintBottom_toBottomOf="@id/textViewChargingTimeRemain"/>

            <ImageView
                android:id="@+id/imageViewChargingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/time"
                app:layout_constraintStart_toStartOf="@id/imageViewChargingTimeRemain"
                app:layout_constraintTop_toBottomOf="@id/imageViewChargingTimeRemain"
                tools:ignore="contentDescription" />

            <TextView
                android:id="@+id/textViewChargingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chargingTime"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@id/textViewChargingAmt"
                app:layout_constraintBottom_toBottomOf="@id/imageViewChargingTime" />

            <TextView
                android:id="@+id/textViewChargingTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00:00"
                android:textSize="30sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/textViewChargingAmtValue"
                app:layout_constraintBottom_toBottomOf="@id/textViewChargingTime"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewChargingVoltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/chargingVoltage"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="@id/cardView" />

    <TextView
        android:id="@+id/textViewChargingVoltageValue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="end"
        android:text="0V"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/textViewChargingVoltage"
        app:layout_constraintStart_toEndOf="@id/textViewChargingVoltage" />

    <TextView
        android:id="@+id/textViewChargingCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/chargingCurrent"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textViewChargingVoltage"
        app:layout_constraintStart_toStartOf="@id/textViewChargingVoltage" />

    <TextView
        android:id="@+id/textViewChargingCurrentValue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="0A"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/textViewChargingCurrent"
        app:layout_constraintEnd_toEndOf="@id/textViewChargingVoltageValue" />

    <TextView
        android:id="@+id/textViewChargingPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/chargingPower"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/textViewChargingPowerValue"
        app:layout_constraintEnd_toStartOf="@id/textViewChargingPowerValue" />

    <TextView
        android:id="@+id/textViewChargingPowerValue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="0kW"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/textViewChargingVoltageValue"
        app:layout_constraintEnd_toEndOf="@id/cardView" />

    <TextView
        android:id="@+id/textViewRequestCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requestCurrent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/textViewChargingPower"
        app:layout_constraintTop_toTopOf="@id/textViewRequestCurrentValue"/>

    <TextView
        android:id="@+id/textViewRequestCurrentValue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="0A"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/textViewChargingPowerValue"
        app:layout_constraintTop_toBottomOf="@id/textViewChargingPowerValue" />

    <Button
        android:id="@+id/btnChargingStop"
        android:layout_width="460dp"
        android:layout_height="100dp"
        android:layout_marginTop="160dp"
        android:text="@string/chargingStop"
        android:textSize="38sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@drawable/shape_btn_white"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>